manifests/dev/basier/outline-ai-assistant/05-vector-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-postgres
  namespace: outline-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-postgres
  template:
    metadata:
      labels:
        app: vector-postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16-trixie  #swr.jez-rakeeza-3.deem.sa/mcp/pgvector:pg16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vector-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vector-postgres
  namespace: outline-stack
spec:
  selector:
    app: vector-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
