manifests/dev/basier/outline-ai-assistant/06-outline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  namespace: outline-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:latest #swr.jez-rakeeza-3.deem.sa/mcp/outline:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: outline-stack
spec:
  selector:
    app: outline
  ports:
    - name: http
      port: 3000
      targetPort: 3000
